attempt to fix menu bar on IE7

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -133,7 +133,7 @@ ul.menu{
 clear: left;
 padding: 0 0 0 50px;
 margin: 0;
-height:30px;
+height: 37px;
 border-left: 1px solid #2c2c7e;
 border-right: 1px solid #020233;
 }
